# RdkPppManager

./: CONTRIBUTING.md  Makefile.am  NOTICE  README.md  configure.ac
config/: RdkPppManager.xml
source/: Makefile.am
source/PppManager/: Makefile.am  pppmgr_global.h  pppmgr_ipc.c  pppmgr_mgr.c  pppmgr_ssp_action.c  pppmgr_ssp_global.h  pppmgr_ssp_internal.h  pppmgr_ssp_main.c  pppmgr_ssp_messagebus_interface.c  pppmgr_ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/middle_layer_src/: Makefile.am  pppmgr_data.c  pppmgr_data.h  pppmgr_dml.c  pppmgr_dml.h  pppmgr_dml_apis.h  pppmgr_dml_apis_bus_utils.c  pppmgr_dml_plugin_main.c  pppmgr_dml_plugin_main.h  pppmgr_dml_plugin_main_apis.c  pppmgr_dml_plugin_main_apis.h  pppmgr_dml_ppp_apis.c  pppmgr_dml_ppp_apis.h  pppmgr_dml_utils.c  pppmgr_utils.c
